Java 17 compat (#247)